no_proxy fmt change
Signed-off-by: Jie Ren <jie.ren@intel.com>

--- a/.github/workflows/platform-validation.yml
+++ b/.github/workflows/platform-validation.yml
@@ -10,7 +10,7 @@ env:
   VALIDATOR_FILE_NAME: "validator.tar.gz"
   ARTIFACT_DIR: "/tmp/artifacts"
   http_proxy: "http://child-prc.intel.com:913"
-  no_proxy: "localhost,127.0.0.1,::1"
+  no_proxy: "localhost"
 
 jobs:
   build-artifacts:
