--- a/.github/workflows/platform-validation.yml
+++ b/.github/workflows/platform-validation.yml
@@ -39,14 +39,14 @@ jobs:
         with:
           go-version: ${{env.GO_VERSION}}
 
-      - name: Build and export Kepler image
+      - name: Build and export Kepler image with test specific tag
         run: |
           make build_containerized
           make save-image
         env:
           IMAGE_REPO: "localhost:5001"
           IMAGE_NAME: "kepler"
-          IMAGE_TAG: "devel"
+          IMAGE_TAG: "platform-validation"
           CTR_CMD: docker
           IMAGE_OUTPUT_PATH: ${{env.OUTPUT_DIR}}${{env.KEPLER_FILE_NAME}}
 
@@ -57,7 +57,7 @@ jobs:
           path: ${{env.OUTPUT_DIR}}${{env.KEPLER_FILE_NAME}}
           retention-days: 1
 
-      - name: Build and push kepler-validator latest
+      - name: Build and push kepler-validator to official group repo with latest tag
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -70,9 +70,9 @@ jobs:
           labels: latest
           file: build/Dockerfile.kepler-validator
 
-      - name: Re-tag and export kepler-validator image
+      - name: Build and export kepler-validator image with test specific tag
         run: |
-          make re-tag
+          make build-validation-container
           make save-image
         env:
           IMAGE_REPO: "localhost:5001"
@@ -81,7 +81,7 @@ jobs:
           CTR_CMD: docker
           IMAGE_OUTPUT_PATH: ${{env.OUTPUT_DIR}}${{env.VALIDATOR_FILE_NAME}}
 
-      - name: Save kepler-validator image as artifact
+      - name: Save kepler-validator test image as artifact
         uses: actions/upload-artifact@v3
         with:
           name: validator
@@ -98,12 +98,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Download Kepler image artifact
+      - name: Download Kepler test image artifact
         uses: actions/download-artifact@v3
         with:
           name: kepler
 
-      - name: Download kepler-validator image artifact
+      - name: Download kepler-validator test image artifact
         uses: actions/download-artifact@v3
         with:
           name: validator
@@ -113,19 +113,19 @@ jobs:
         env:
           CLUSTER_PROVIDER: ${{matrix.cluster_provider}}
           IMAGE_REPO: "localhost:5001"
-          IMAGE_TAG: "devel"
+          IMAGE_TAG: "platform-validation"
           CTR_CMD: docker
 
-      - name: Import Kepler image
+      - name: Import Kepler test image
         run: make load-image
         env:
           IMAGE_REPO: "localhost:5001"
           IMAGE_NAME: "kepler"
-          IMAGE_TAG: "devel"
+          IMAGE_TAG: "platform-validation"
           CTR_CMD: docker
           INPUT_PATH: ${{env.KEPLER_FILE_NAME}}
 
-      - name: Import kepler-validator image
+      - name: Import kepler-validator test image
         run: make load-image
         env:
           IMAGE_REPO: "localhost:5001"
@@ -152,16 +152,16 @@ jobs:
           prometheus_enable: true
           grafana_enable: true
 
-      - name: Push Kepler image to local registry
+      - name: Push Kepler test image to local registry
         run: |
           make push-image
         env:
           IMAGE_REPO: "localhost:5001"
           IMAGE_NAME: "kepler"
-          IMAGE_TAG: "devel"
+          IMAGE_TAG: "platform-validation"
           CTR_CMD: docker
 
-      - name: Push kepler-validator image to local registry
+      - name: Push kepler-validator test image to local registry
         run: |
           make push-image
           make image-prune
@@ -185,7 +185,7 @@ jobs:
         env:
           CLUSTER_PROVIDER: ${{matrix.cluster_provider}}
           IMAGE_REPO: "localhost:5001"
-          IMAGE_TAG: "devel"
+          IMAGE_TAG: "platform-validation"
           CTR_CMD: docker
 
       - name: Save artifacts
